force-app/main/default/objects/Proposal_Role__c/fields/Intern_taking_classes_while_hired__c.field-meta.xml
<CustomField>
    <fullName>Intern_taking_classes_while_hired__c</fullName>
    <label>Intern taking classes while hired?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>