force-app/main/default/objects/Proposal_Role__c/fields/International_Country__c.field-meta.xml
<CustomField>
    <fullName>International_Country__c</fullName>
    <description>To get any country name internationally</description>
    <label>International Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>