force-app/main/default/objects/Proposal_Role__c/fields/International_State__c.field-meta.xml
<CustomField>
    <fullName>International_State__c</fullName>
    <description>To get the International State</description>
    <label>International State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>