force-app/main/default/objects/Proposal_Role__c/fields/Is_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Is_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Applicant</label>
    <type>Checkbox</type>
</CustomField>