force-app/main/default/objects/Proposal_Role__c/fields/Is_meet_CS_goals__c.field-meta.xml
<CustomField>
    <fullName>Is_meet_CS_goals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is meet CS goals</label>
    <type>Checkbox</type>
</CustomField>