force-app/main/default/objects/Proposal_Role__c/fields/Is_this_entity_tax_exempt__c.field-meta.xml
<CustomField>
    <fullName>Is_this_entity_tax_exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case Number 00009737:  Information as to whether the entity is tax exempt. Used in proposal submission wizard.</description>
    <label>Is this entity tax exempt?</label>
    <type>Checkbox</type>
</CustomField>