force-app/main/default/objects/Proposal_Role__c/fields/Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Job_Description__c</fullName>
    <inlineHelpText>Please provide a brief description of activities to be performed on the job (maximum three sentences).</inlineHelpText>
    <label>Job Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>