force-app/main/default/objects/Proposal_Role__c/fields/Job_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_End_Date__c</fullName>
    <description>WFD / OJT : Used for both the New Hire and Intern Applications.</description>
    <inlineHelpText>The anticipated date the OJT period ends. This is 16 weeks after the start date for traditional workers and 24 weeks after the start date for members of priority populations and disadvantaged communities.</inlineHelpText>
    <label>Job End Date</label>
    <type>Date</type>
</CustomField>