force-app/main/default/objects/Proposal_Role__c/fields/Job_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Start_Date__c</fullName>
    <description>When will the hire start working? Created for the WFD/OJT New Hire &amp; Intern applications.</description>
    <inlineHelpText>The date the hire starts and the OJT period begins</inlineHelpText>
    <label>Job Start Date</label>
    <type>Date</type>
</CustomField>