force-app/main/default/objects/Proposal_Role__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>Created for WFD/OJT: New Hire Application / Intern Application.</description>
    <label>Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>