force-app/main/default/objects/Proposal_Role__c/fields/Lock_Edits__c.field-meta.xml
<CustomField>
    <fullName>Lock_Edits__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prevent users from editing the project role from within the application wizard.
For NCP, only access level will be editable.</description>
    <label>Lock Edits</label>
    <type>Checkbox</type>
</CustomField>