force-app/main/default/objects/Proposal_Role__c/fields/Mailingaddress_same_as_buildingaddress__c.field-meta.xml
<CustomField>
    <fullName>Mailingaddress_same_as_buildingaddress__c</fullName>
    <label>Mailingaddress same as buildingaddress?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>