force-app/main/default/objects/Proposal_Role__c/fields/Max_Rate_Reimbursed__c.field-meta.xml
<CustomField>
    <fullName>Max_Rate_Reimbursed__c</fullName>
    <description>The dollar amount of the maximum reimbursement rate for WFD New Hire / Internship at that point in time.</description>
    <inlineHelpText>For WFD New Hire, the comparison takes place after the reimbursement percentage is applied to the total rate [final_rate_reimbursed = (total_rate X reimbursement_%) OR max_rate_reimbursed, whichever is less]. For WFD Internship, this rate is compared to the employee&apos;s hourly rate before applying the reimbursement percentage [final_rate_reimbursed = reimbursement_% X (total_rate OR max_rate_reimbursed, whichever is less)]. The max rate reimbursed is subject to periodic change.</inlineHelpText>
    <label>Max Rate Reimbursed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>