force-app/main/default/objects/Proposal_Role__c/fields/Maximum_Hours__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Hours__c</fullName>
    <description>The Maximum Number of Hours this role will be reimbursed for by NYSERDA. Used by WFD</description>
    <inlineHelpText>The Maximum Number of Hours this role will be reimbursed for by NYSERDA.</inlineHelpText>
    <label>Maximum Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>