force-app/main/default/objects/Proposal_Role__c/fields/Most_Recent_Educational_Institution__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Educational_Institution__c</fullName>
    <description>Used by WFD Intern Application.</description>
    <label>Most Recent Educational Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>