force-app/main/default/objects/Proposal_Role__c/fields/My_Company_Outside_of_the_United_States__c.field-meta.xml
<CustomField>
    <fullName>My_Company_Outside_of_the_United_States__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To identify the company is registered outside USA. Helps to get the international address.</description>
    <label>My Company Outside of the United States</label>
    <type>Checkbox</type>
</CustomField>