force-app/main/default/objects/Proposal_Role__c/fields/NYS_MWBE__c.field-meta.xml
<CustomField>
    <fullName>NYS_MWBE__c</fullName>
    <description>Provide your NYS MWBE number. For more information, please refer to the NY State Division of Minority and Women’s Business Development website.</description>
    <inlineHelpText>Provide your NYS MWBE number. Visit: ogs.ny.gov/mwbe for more information about MWBEs.</inlineHelpText>
    <label>NYS MWBE</label>
    <type>TextArea</type>
</CustomField>