force-app/main/default/objects/Proposal_Role__c/fields/NYS_Veteran_Owned__c.field-meta.xml
<CustomField>
    <fullName>NYS_Veteran_Owned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NYS Veteran Owned</label>
    <type>Checkbox</type>
</CustomField>