force-app/main/default/objects/Proposal_Role__c/fields/NYS_Women_Owned__c.field-meta.xml
<CustomField>
    <fullName>NYS_Women_Owned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NYS Women Owned</label>
    <type>Checkbox</type>
</CustomField>