force-app/main/default/objects/Proposal_Role__c/fields/Opt_out_from_other_programs__c.field-meta.xml
<CustomField>
    <fullName>Opt_out_from_other_programs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt-out from other programs</label>
    <type>Checkbox</type>
</CustomField>