force-app/main/default/objects/Proposal_Role__c/fields/Other_Technology_Area__c.field-meta.xml
<CustomField>
    <fullName>Other_Technology_Area__c</fullName>
    <description>If Primary_Technology_Area_of_New_Hire__c is &apos;Other&apos;, this must be filled in. (WFD - New Hire business application)</description>
    <inlineHelpText>If you selected &quot;Other&quot; for the Primary Technology Area, please fill it in here.</inlineHelpText>
    <label>Other Technology Area</label>
    <length>100</length>
    <type>Text</type>
</CustomField>