force-app/main/default/objects/Proposal_Role__c/fields/Owner_address_same_as_building_address__c.field-meta.xml
<CustomField>
    <fullName>Owner_address_same_as_building_address__c</fullName>
    <label>Owner address same as building address?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>