force-app/main/default/objects/Proposal_Role__c/fields/parent_Account__c.field-meta.xml
<CustomField>
    <fullName>parent_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is role tied to parent Account</label>
    <type>Checkbox</type>
</CustomField>