force-app/main/default/objects/Proposal_Role__c/fields/Payee_Different_than_Seller__c.field-meta.xml
<CustomField>
    <fullName>Payee_Different_than_Seller__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payee Different than Seller</label>
    <type>Checkbox</type>
</CustomField>