force-app/main/default/objects/Proposal_Role__c/fields/Permission__c.field-meta.xml
<CustomField>
    <fullName>Permission__c</fullName>
    <label>Permission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Access</fullName>
            </value>
            <value>
                <fullName>Read Only</fullName>
            </value>
            <value>
                <fullName>Read-Write-Upload Documents</fullName>
            </value>
            <value>
                <fullName>Read-Write-Upload Documents-Signatory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>