force-app/main/default/objects/Proposal_Role__c/fields/Preferred_Means_of_Communication__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Means_of_Communication__c</fullName>
    <inlineHelpText>Choose your preferred method of communication. NYSERDA will use this method to contact you if there are questions about your application.</inlineHelpText>
    <label>Preferred Means of Communication</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>