force-app/main/default/objects/Proposal_Role__c/fields/Previous_Hire__c.field-meta.xml
<CustomField>
    <fullName>Previous_Hire__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by WFD Intern program</description>
    <inlineHelpText>Have you previously been hired as an intern through the NYSERDA Clean Energy Internship Program?</inlineHelpText>
    <label>Previous Hire?</label>
    <type>Checkbox</type>
</CustomField>