force-app/main/default/objects/Proposal_Role__c/fields/Primary_Customer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Customer_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Contact</label>
    <type>Checkbox</type>
</CustomField>