force-app/main/default/objects/Proposal_Role__c/fields/Primary_Technology_Area_of_New_Hire__c.field-meta.xml
<CustomField>
    <fullName>Primary_Technology_Area_of_New_Hire__c</fullName>
    <description>What is the primary technology type for the position that the new hire will hold.</description>
    <inlineHelpText>Select the technology type most closely associated with the new hire&apos;s job description.</inlineHelpText>
    <label>Primary Technology Area of New Hire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Building Automations &amp; Controls</fullName>
            </value>
            <value>
                <fullName>Energy Efficiency</fullName>
            </value>
            <value>
                <fullName>Energy Storage</fullName>
            </value>
            <value>
                <fullName>EV Charging Stations</fullName>
            </value>
            <value>
                <fullName>Heat Pumps</fullName>
            </value>
            <value>
                <fullName>High Efficiency HVAC</fullName>
            </value>
            <value>
                <fullName>Lighting &amp; Controls</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Smart Grid</fullName>
            </value>
            <value>
                <fullName>Solar Electric</fullName>
            </value>
            <value>
                <fullName>Offshore Wind</fullName>
            </value>
            <value>
                <fullName>Land Based Wind</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>