force-app/main/default/objects/Proposal_Role__c/fields/Priority_Population__c.field-meta.xml
<CustomField>
    <fullName>Priority_Population__c</fullName>
    <label>Priority Population</label>
    <length>100</length>
    <type>Text</type>
</CustomField>