force-app/main/default/objects/Proposal_Role__c/fields/Project_Role_Notification_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Role_Notification_Type__c</fullName>
    <label>Project Role Notification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QA Manager Approval Notification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>