force-app/main/default/objects/Proposal_Role__c/fields/QA_Contact__c.field-meta.xml
<CustomField>
    <fullName>QA_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QA Contact</label>
    <type>Checkbox</type>
</CustomField>