force-app/main/default/objects/Proposal_Role__c/fields/Receive_Any_Assistance__c.field-meta.xml
<CustomField>
    <fullName>Receive_Any_Assistance__c</fullName>
    <label>Receive Any Assistance?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>