force-app/main/default/objects/Proposal_Role__c/fields/Referral_Letter_Received__c.field-meta.xml
<CustomField>
    <fullName>Referral_Letter_Received__c</fullName>
    <label>Referral Letter Received?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>