force-app/main/default/objects/Proposal_Role__c/fields/Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Referral_Source__c</fullName>
    <label>Referral Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Utility</fullName>
            </value>
            <value>
                <fullName>Department of Social Service</fullName>
            </value>
            <value>
                <fullName>Weatherization Agency</fullName>
            </value>
            <value>
                <fullName>Office for the Aging</fullName>
            </value>
            <value>
                <fullName>Human Service Organization</fullName>
            </value>
            <value>
                <fullName>Self Referral</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Healthy Homes Pilot</fullName>
            </value>
            <value>
                <fullName>Community Energy Advisor</fullName>
            </value>
            <value>
                <fullName>Community Blitz</fullName>
            </value>
            <value>
                <fullName>NYS Agency</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>