force-app/main/default/objects/Proposal_Role__c/fields/Referring_Agency_Screening__c.field-meta.xml
<CustomField>
    <fullName>Referring_Agency_Screening__c</fullName>
    <label>Referring Agency Screening</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>