force-app/main/default/objects/Proposal_Role__c/fields/Reimbursement_Percent__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Percent__c</fullName>
    <description>The percent of this roles salary that NYSERDA will reimburse for. Used by WFD.</description>
    <inlineHelpText>Refer to PON 3982 Reimbursement Details for guidance on applicable reimbursement percentage. https://www.nyserda.ny.gov/All-Programs/Programs/Clean-Energy-Workforce-Development/On-the-job-training</inlineHelpText>
    <label>Reimbursement Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>