force-app/main/default/objects/Proposal_Role__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Choose Contractor if the contact is service provider. Choose Builder if the contact is a system provider. Choose Customer for site specific contacts</description>
    <inlineHelpText>Choose Contractor if the contact is service provider. Choose Builder if the contact is a system provider. Choose Customer for site specific contacts</inlineHelpText>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advisor</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Authorized Representative</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Design Team Lead</fullName>
            </value>
            <value>
                <fullName>Designated Agent</fullName>
            </value>
            <value>
                <fullName>Designer</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Driller</fullName>
            </value>
            <value>
                <fullName>Engineer</fullName>
            </value>
            <value>
                <fullName>External Implementation Contractor</fullName>
            </value>
            <value>
                <fullName>External Project Manager</fullName>
            </value>
            <value>
                <fullName>Government Official</fullName>
            </value>
            <value>
                <fullName>Implementation Partner</fullName>
            </value>
            <value>
                <fullName>Installer</fullName>
            </value>
            <value>
                <fullName>Landlord</fullName>
            </value>
            <value>
                <fullName>Legal Notice</fullName>
            </value>
            <value>
                <fullName>Marketing/External Affairs</fullName>
            </value>
            <value>
                <fullName>NYSERDA Project Coordinator</fullName>
            </value>
            <value>
                <fullName>NYSERDA Project Manager</fullName>
            </value>
            <value>
                <fullName>Payee</fullName>
            </value>
            <value>
                <fullName>Primary Energy Consultant</fullName>
            </value>
            <value>
                <fullName>Project Owner</fullName>
            </value>
            <value>
                <fullName>Project Sponsor</fullName>
            </value>
            <value>
                <fullName>Property Manager</fullName>
            </value>
            <value>
                <fullName>Proposer</fullName>
            </value>
            <value>
                <fullName>Quality Assurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>