force-app/main/default/objects/Proposal_Role__c/fields/Role_Status__c.field-meta.xml
<CustomField>
    <fullName>Role_Status__c</fullName>
    <label>Role Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Selected</fullName>
            </value>
            <value>
                <fullName>Not Selected</fullName>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>