force-app/main/default/objects/Proposal_Role__c/fields/Seasons_Available__c.field-meta.xml
<CustomField>
    <fullName>Seasons_Available__c</fullName>
    <description>Used by WFD Intern Application</description>
    <inlineHelpText>Indicate when you are interested in internship opportunities (select all that apply):</inlineHelpText>
    <label>Seasons Available</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spring</fullName>
            </value>
            <value>
                <fullName>Summer</fullName>
            </value>
            <value>
                <fullName>Fall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>