force-app/main/default/objects/Proposal_Role__c/fields/Secondary_Project_Role__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Project_Role__c</fullName>
    <inlineHelpText>This optional field can further explain the &quot;Contact Role&quot;.</inlineHelpText>
    <label>Secondary Project Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advanced Clean Energy Project Mentorship</fullName>
            </value>
            <value>
                <fullName>Architect/Engineer</fullName>
            </value>
            <value>
                <fullName>Carbon Neutral at Scale</fullName>
            </value>
            <value>
                <fullName>ENERGY STAR Builder/ Developer</fullName>
            </value>
            <value>
                <fullName>ENERGY STAR Certified Homes Builder</fullName>
            </value>
            <value>
                <fullName>ENERGY STAR MFHR Developer</fullName>
            </value>
            <value>
                <fullName>HERS Rater</fullName>
            </value>
            <value>
                <fullName>Multifamily Performance Partner</fullName>
            </value>
            <value>
                <fullName>Multifamily Review Organization</fullName>
            </value>
            <value>
                <fullName>Passive House Consultant</fullName>
            </value>
            <value>
                <fullName>Passive House QA</fullName>
            </value>
            <value>
                <fullName>RESNET Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>