force-app/main/default/objects/Proposal_Role__c/fields/Seller_Type_of_Business_Entity__c.field-meta.xml
<CustomField>
    <fullName>Seller_Type_of_Business_Entity__c</fullName>
    <label>Seller Type of Business Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporation</fullName>
            </value>
            <value>
                <fullName>LLC</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>