force-app/main/default/objects/Proposal_Role__c/fields/Sent_for_E_Signinng__c.field-meta.xml
<CustomField>
    <fullName>Sent_for_E_Signinng__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent for E-Signing</label>
    <type>Checkbox</type>
</CustomField>