force-app/main/default/objects/Proposal_Role__c/fields/Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Signed_Date__c</fullName>
    <label>Signed Date</label>
    <type>Date</type>
</CustomField>