force-app/main/default/objects/Proposal_Role__c/fields/Specific_Project_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Specific_Project_Responsibility__c</fullName>
    <description>Specific Project Responsibility</description>
    <label>Specific Project Responsibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>