force-app/main/default/objects/Proposal_Role__c/fields/Supervisor_Name__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Name__c</fullName>
    <description>Who will be the supervisor of the OJT hire</description>
    <label>Supervisor Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>