force-app/main/default/objects/Proposal_Role__c/fields/Tax_Identification_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Identification_Type__c</fullName>
    <label>Tax Identification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EIN</fullName>
            </value>
            <value>
                <fullName>SSN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>