force-app/main/default/objects/Proposal_Role__c/fields/TEMP_Field__c.field-meta.xml
<CustomField>
    <fullName>TEMP_Field__c</fullName>
    <formula>Contact__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TEMP Field</label>
    <type>Text</type>
</CustomField>