force-app/main/default/objects/Proposal_Role__c/fields/Terms_Condition_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Terms_Condition_Acceptance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terms &amp; Condition Acceptance</label>
    <type>Checkbox</type>
</CustomField>