force-app/main/default/objects/Proposal_Role__c/fields/Total_Estimated_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Reimbursement__c</fullName>
    <description>What is the total value of the contract if completed</description>
    <label>Total Estimated Reimbursement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>